# Twister-cpp

./: CMakeLists.txt  Twister_cpp.1  main.cpp
Twister-cpp/: CMakeLists.txt  README.md
Twister-cpp/client/: driver.cpp  driver.h  synchronizer.cpp
Twister-cpp/communication/: #conn_manager.cpp#  CMakeLists.txt  conn_manager.cpp
Twister-cpp/config/: driver_config.cpp  job_config.cpp  job_config.h  mapper_config.cpp  reduce_config.h
Twister-cpp/log/: log.cpp
Twister-cpp/message/: ack_mapper_msg.cpp  gather_start_msg.cpp  gather_start_msg.h  map_request.cpp  map_request_grp_msg.cpp  map_request_grp_msg.h  map_start_grp_msg.cpp  map_start_grp_msg.h  map_start_msg.cpp  map_start_msg.h  message.cpp  message.h  reduce_input_request_msg.h  reduce_request_msg.cpp  reduce_start_msg.cpp  task_status_msg.h
Twister-cpp/samples/: CMakeLists.txt  main.cpp  word_count.cpp  word_count_gather.h  word_count_mapper.h
Twister-cpp/serialization/: in_archive.cpp  in_archive.h  out_archive.h
Twister-cpp/tasks/: map_task.cpp  map_task.h  reduce_task.cpp
Twister-cpp/types/: gather_input.cpp  gather_input.h  int_value.h  key.cpp  reduce_input.h  string_key.cpp  string_key.h  value.h
Twister-cpp/utility/: class_factory.cpp  class_factory.h  map_factory.cpp  map_factory.h  reduce_selector.cpp
Twister-cpp/worker/: daemon.cpp  daemon.h  gather.cpp  map_output_collector.cpp  map_output_collector.h  reduce_output_collector.h  run.cpp
client/: driver.cpp  driver.h  synchronizer.cpp  synchronizer.h
communication/: conn_manager.cpp  conn_manager.h
config/: driver_config.h  job_config.cpp  job_config.h  job_state.cpp  job_state.h  log4cpp.properties  mapper_config.h  reduce_config.cpp
data/: wc_data
log/: log.h
message/: ack_mapper_msg.h  ack_msg.cpp  ack_msg.h  map_request.h  map_request_msg.cpp  map_request_msg.h  message.h  reduce_input_msg.cpp  reduce_input_msg.h  reduce_input_request_msg.cpp  reduce_request_grp_msg.cpp  reduce_request_grp_msg.h  reduce_request_msg.h  reduce_start_msg.h  task_status_msg.cpp
pub/: constants.h
samples/: word_count.cpp  word_count_gather.cpp  word_count_gather.h  word_count_mapper.cpp  word_count_mapper.h  word_count_reducer.cpp  word_count_reducer.h
serialization/: in_archive.h  out_archive.cpp  out_archive.h
tasks/: map_task.cpp  map_task.h  reduce_task.cpp  reduce_task.h
types/: int_value.cpp  key.cpp  key.h  reduce_input.cpp  reduce_input.h  string_key.cpp  string_key.h  string_value.cpp  string_value.h  value.cpp  value.h
utility/: class_factory.cpp  reduce_selector.h
worker/: daemon.cpp  daemon.h  gather.h  map_output_collector.cpp  map_output_collector.h  mapper.cpp  mapper.h  reduce_output_collector.cpp  reduce_output_collector.h  reducer.cpp  reducer.h  run.cpp
